fixed alignment on options

--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ section.how-can-i-help .selections{
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
 }
 
